--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Cristian Ciofu
 description: PHP Backend Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://www.iamchris.info/wp-content/uploads/2015/02/IamChris_face.png
+avatar: https://www.dropbox.com/s/f2h7cyzhvgd4v8d/__logo_face.png?raw=1
 
 #
 # Flags below are optional
